--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.507.0",
     "motion": "^12.9.4",
-    "next": "13.5.4",
+    "next": "^13.5.4",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
